src/components/reusable/numberInput/numberInput.scss
@use '../../../common/scss/global.scss';
@use '../../../common/scss/form-input.scss';
@use '@kyndryl-design-system/shidoka-foundation/scss/mixins/typography.scss';

:host {
  display: inline-block;
  max-width: 100%;
  box-sizing: border-box;

  --kyn-number-input-inner-max-width: 200px;
  --kyn-number-input-inner-min-width: 0px;
}

.label-text {
  display: block;
  white-space: normal;
  word-wrap: break-word;
  overflow: visible;
  width: 100%;
  margin-bottom: 8px;
}

.input-wrapper {
  display: flex;
  align-items: center;
  gap: 8px;
  width: 100%;
  min-width: 0;
  justify-content: flex-start;
}

kyn-button {
  flex: 0 0 auto;
}

input {
  -webkit-appearance: none;
  appearance: none;
  display: block;

  flex: 1 1 auto;
  min-width: var(--kyn-number-input-inner-min-width);
  width: 100%;
  max-width: var(--kyn-number-input-inner-max-width);

  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  height: 48px;
  padding: 0 16px;
  box-sizing: border-box;
  // md (default) typography
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;

  &:focus-visible {
    outline-color: var(--kd-color-border-variants-focus);
  }

  &.size--xs {
    height: 26px;
    font-size: 12px;
    line-height: 18px;
    letter-spacing: 0.32px;
  }

  &.size--sm {
    height: 32px;
    font-size: 14px;
    line-height: 18px;
    letter-spacing: 0.32px;
  }

  &.size--lg {
    height: 56px;
    font-size: 16px;
    line-height: 18px;
    letter-spacing: 0.32px;
  }

  &.icon--left {
    padding-left: 48px;
  }

  &:not([disabled])[invalid] {
    border-color: var(--kd-color-border-variants-destructive);
  }

  &:not([disabled]) {
    &:active {
      outline: 2px solid var(--kd-color-border-ui-pressed);
    }
  }

  &.no-border {
    border-color: transparent;
    background: transparent;
  }
}

/* Hide native arrow controls */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type='number'] {
  -moz-appearance: textfield;
  appearance: textfield;
}

span[slot='icon'] {
  display: flex;
}

